Added more Session classes